# bsv-wallet-toolbox-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
examples/: CLAUDE.md  basic_wallet.rs  chaintracks_demo.rs  monitor_demo.rs
scripts/: audit_utxos.py
src/: CLAUDE.md  error.rs  lib.rs  lock_utils.rs  tsc_proof.rs  utils.rs
src/chaintracks/: CLAUDE.md  chaintracks.rs  mod.rs  traits.rs  types.rs
src/chaintracks/ingestors/: CLAUDE.md  bulk_cdn.rs  bulk_woc.rs  live_polling.rs  live_websocket.rs  mod.rs
src/chaintracks/storage/: CLAUDE.md  memory.rs  mod.rs  sqlite.rs
src/managers/: CLAUDE.md  auth_manager.rs  cwi_style_wallet_manager.rs  mod.rs  permissions_manager.rs  settings_manager.rs  simple_wallet_manager.rs  storage_manager.rs
src/monitor/: CLAUDE.md  config.rs  daemon.rs  mod.rs
src/monitor/tasks/: CLAUDE.md  arcade_events.rs  check_for_proofs.rs  check_no_sends.rs  clock.rs  compact_beef.rs  fail_abandoned.rs  mod.rs  monitor_call_history.rs  new_header.rs  purge.rs  reorg.rs  review_status.rs  send_waiting.rs  sync_when_idle.rs  unfail.rs
src/services/: CLAUDE.md  collection.rs  mock.rs  mod.rs  services.rs  traits.rs
src/services/providers/: CLAUDE.md  arc.rs  arcade.rs  bhs.rs  bitails.rs  chaintracks_client.rs  fallback_chain_tracker.rs  mod.rs  whatsonchain.rs
src/storage/: CLAUDE.md  broadcast.rs  mod.rs  traits.rs
src/storage/client/: CLAUDE.md  auth.rs  json_rpc.rs  mod.rs  storage_client.rs
src/storage/entities/: mod.rs
src/storage/sqlx/: CLAUDE.md  abort_action.rs  beef_verification.rs  create_action.rs  internalize_action.rs  mod.rs  sync.rs  (+2 more)
src/wallet/: CLAUDE.md  certificate_issuance.rs  lookup.rs  mod.rs  signer.rs  wallet.rs
test_vectors/: README.md
test_vectors/keys/: brc29.json  test_users.json
test_vectors/transactions/: merkle_path.json
tests/: CLAUDE.md  arc_beef_broadcast_tests.rs  arcade_tests.rs  beef_edge_cases.rs  chaintracks_integration_tests.rs  concurrent_tests.rs  double_spend_tests.rs  error_path_tests.rs  error_recovery_tests.rs  monitor_tests.rs  reorg_tests.rs  review_status_tests.rs  services_tests.rs  sync_manager_tests.rs  test_vectors.rs
(+5 files in other folders)
