[package]
name = "bsv-wallet-toolbox-rs"
version = "0.3.32"
edition = "2021"
authors = ["John Calhoun <dev@calhounjohn.com>"]
description = "Storage and services for BSV wallets - Rust implementation of @bsv/wallet-toolbox"
license = "MIT"
repository = "https://github.com/Calhooon/bsv-wallet-toolbox-rs"
homepage = "https://github.com/Calhooon/bsv-wallet-toolbox-rs"
keywords = ["bitcoin", "bsv", "wallet", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
remote = []  # StorageClient for storage.babbage.systems
full = ["sqlite", "mysql", "remote"]

[dependencies]
# BSV SDK - provides primitives, transactions, wallet traits
bsv-rs = { version = "0.3.4", features = ["full", "http"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQL database
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs for references
uuid = { version = "1", features = ["v4", "serde"] }

# Logging/tracing
tracing = "0.1"

# Async traits
async-trait = "0.1"

# Cryptography (for Chaintracks)
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"

# Random generation
rand = "0.8"

# Base64 encoding
base64 = "0.22"

# Lazy static initialization
once_cell = "1.19"

# Cryptography for PBKDF2 (CWI manager)
ring = "0.17"

# Zeroization of sensitive key material on drop
zeroize = "1.8"

# WebSocket support (for live ingestors)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
mockito = "1.4"

[[example]]
name = "basic_wallet"
path = "examples/basic_wallet.rs"

[[example]]
name = "monitor_demo"
path = "examples/monitor_demo.rs"

[[example]]
name = "chaintracks_demo"
path = "examples/chaintracks_demo.rs"
